--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <style>
+        .tab-pane {
+            white-space:pre-line;
+        }
         .nav-tabs > .active > a, .nav-tabs > .active > a:hover { 
             outline: 0;
             color: #555555;
