--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 </div>
 </nav>
-<h5>Click on an indicator for more information.</h5>
+<h4><center>Click on an indicator for more information.</center></h4>
 <br>
 
 <ul id='toplist' class='list-group'>
